--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
           <div class="input-field col s12">
               <input placeholder="Contraseña" id="first_name" type="text" class="validate">
           </div>
-          <!-- <div class="col s12">
+          <div class="col s12">
             <li><a class="waves-effect waves-light btn" >ENTRAR</a></li><br>
             <li> <a class="waves-effect waves-light btn" >REGISTRATE</a></li>
-        </div> -->
+        </div>
           
         </div>
       </div>
@@ -64,7 +64,7 @@
   </section>
   <!--fin del login-->
 
-<section id="navbar">
+<section id="navbar" style="display: none">
   <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
       <li><a href="#!" onclick="inicio()">Inicio</a></li>
